Fix padding issue in menu on mobile devices

--- a/themes/hugo-paper/static/css/style.css
+++ b/themes/hugo-paper/static/css/style.css
@@ -188,6 +188,7 @@ pre, code {
   .menu li {
     width: 100%;
     margin-left: 0;
+    padding-left: 0;
   }
   .menu a {
     font-size: 20px;
